11. network policies/ingress-deny-all/delhi-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: delhi-deny-all
  namespace: delhi
spec:
  podSelector:
    matchLabels:
      ns: delhi
  ingress: []
