11. network policies/ingress-deny-all/hyderabad-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hyderabad-deny-all
  namespace: hyderabad
spec:
  podSelector:
    matchLabels:
      ns: hyderabad
  policyTypes:
    - Ingress
  ingress: []
