11. network policies/ingress-deny-all/ingress-deny-mysqldb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysqldb-deny-all
  namespace: mysqldb
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Ingress
  ingress: []
